# Pathfinder-Character-Viewer

./: Cargo.toml
data/: abilities.json  classes.json  feats.json  items.json  races.json  spells.json
src/: app.rs  lib.rs  main.rs  theme.rs
src/classes/: mod.rs  ninja.rs  witch.rs
src/data/: loader.rs  mod.rs
src/model/: character.rs  compendium.rs  mod.rs  settings.rs
src/persistence/: mod.rs
src/persistence/pdf/: layout.rs  mod.rs  sections.rs
src/pipeline/: mod.rs
src/rules/: derived.rs  display.rs  mod.rs  progression.rs  skills.rs
src/ui/: combat.rs  combat_ref.rs  features.rs  gallery.rs  general.rs  images.rs  inventory.rs  mod.rs  narrative.rs  notes.rs  roster.rs  settings.rs  shop.rs  sidebar.rs  skills.rs  spells.rs  widgets.rs
