[package]
name = "pathfinder_viewer"
version = "0.1.0"
edition = "2021"
description = "Modular Pathfinder 1e character sheet viewer/editor"

[lib]
name = "pathfinder_viewer"
path = "src/lib.rs"

[[bin]]
name = "pathfinder_viewer"
path = "src/main.rs"

[[bin]]
name = "build_data"
path = "src/bin/build_data.rs"

[dependencies]
iced = { version = "0.13", features = ["image", "advanced", "tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
rfd = "0.15"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
